# VQ-RNA-Back

./: 1-0.fasta  1-1.csv  CMakeLists.txt  DataBase.py  FileControl.py  LICENSE  Pool.py  README.md  Readme.md  environment.yml  importance_motif.py  index.html  main.py  motif.py  note.md  package-lock.json  plot.py  server.js  terminal.js  test.cpp  test.js  test.py  test.sh  train_mymodel.py  usage.html  useCsv.py  vq-rna.db
DB/: vq-rna.db
Files/: 6ba84dbbb8e2.fasta
include/: operatehttp.h  operatelog.h
src/: main.cpp  operatehttp.cpp  operatelog.cpp  test.cpp
